🎨 Add hero image for Loaves and Fishes article

--- a/src/content/blog/drafts/loaves-and-fishes/loaves-and-fishes.mdx
+++ b/src/content/blog/drafts/loaves-and-fishes/loaves-and-fishes.mdx
@@ -4,7 +4,14 @@ date: 2023-07-03
 slug: 'loaves-and-fishes'
 type: Post
 status: Draft
-description: ''
+description: 'Giving our all to the Lord, no matter how simple the offering.'
+image:
+  alt: two hands holding out a circular loaf of bread wrapped in a cloth
+  source: ./two-hands-holding-out-a-circular-loaf-of-bread-wrapped-in-a-cloth.jpg
+  attribution:
+    author: Kate Remmer
+    sourceName: Unsplash
+    sourceUrl: https://unsplash.com/photos/person-holding-pastry-RZn4_FzNUCY
 ---
 
 <Callout>
