--- a/src/content/blog/2024/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
+++ b/src/content/blog/2024/connecting-antlr-to-codemirror-6-building-a-language-server/connecting-antlr-to-codemirror-6-building-a-language-server.mdx
@@ -585,4 +585,4 @@ import {CodeEditorWithTokens} from './CodeEditorWithTokens';
 
 ## What's next
 
-The second part of this series will take a deep dive into the effort required to connect our newly-minted language server to CodeMirror 6. In the meantime, feel free to explore the [full Zephyr demo site](https://zephyr-demo.netlify.app/) along with the [source code](https://github.com/thetrevorharmon/zephyr-demo) (I would recommend checking out the [`ParserAdapter` class](https://github.com/thetrevorharmon/zephyr-demo/blob/main/src/extensions/zephyr/ParserAdapter.ts) if you are really wanting to dig deeper).
+The [second part](/blog/connecting-antlr-to-code-mirror-6-connecting-a-language-server/) of this series will take a deep dive into the effort required to connect our newly-minted language server to CodeMirror 6. In the meantime, feel free to explore the [full Zephyr demo site](https://zephyr-demo.netlify.app/) along with the [source code](https://github.com/thetrevorharmon/zephyr-demo) (I would recommend checking out the [`ParserAdapter` class](https://github.com/thetrevorharmon/zephyr-demo/blob/main/src/extensions/zephyr/ParserAdapter.ts) if you are really wanting to dig deeper).
