🎨 Add header image for advanced state management

--- a/src/content/blog/drafts/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
+++ b/src/content/blog/drafts/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
@@ -5,6 +5,13 @@ slug: "advanced-state-management-with-react-and-codemirror"
 type: Post
 status: Draft
 description: ""
+image:
+  alt: a long, curvy bookshelf with a man looking for a book
+  source: a-long-curvy-bookshelf-with-a-man-looking-for-a-book.jpg
+  attribution:
+    author: Fahrul Azmi
+    sourceName: Unsplash
+    sourceUrl: https://unsplash.com/photos/man-looking-book-inside-library-cFUZ-6i83vs
 ---
 
 <Callout>
