📝 Update date, status, and description of article

--- a/src/content/blog/2024/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
+++ b/src/content/blog/2024/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Advanced state management with React and CodeMirror"
-date: 2024-02-15
+date: 2024-03-25
 slug: "advanced-state-management-with-react-and-codemirror"
 type: Post
-status: Draft
-description: ""
+status: Published
+description: Going beyond the basics with these two libraries.
 image:
   alt: a long, curvy bookshelf with a man looking for a book
   source: a-long-curvy-bookshelf-with-a-man-looking-for-a-book.jpg
