📝 Publish "Loaves and Fishes"

--- a/src/content/blog/2024/loaves-and-fishes/loaves-and-fishes.mdx
+++ b/src/content/blog/2024/loaves-and-fishes/loaves-and-fishes.mdx
@@ -1,9 +1,9 @@
 ---
 title: Loaves and fishes
-date: 2023-07-03
+date: 2024-06-28
 slug: 'loaves-and-fishes'
 type: Post
-status: Draft
+status: Published
 description: 'Giving our all to the Lord, no matter how simple the offering.'
 image:
   alt: two hands holding out a circular loaf of bread wrapped in a cloth
