✨ Add frontmatter support for include_in_reading_list
This features enables granular control over what shows up
in the generated reading list.

--- a/src/content/blog/2016/what-facebook-can-teach-us-about-the-new-macbook-pro/what-facebook-can-teach-us-about-the-new-macbook-pro.mdx
+++ b/src/content/blog/2016/what-facebook-can-teach-us-about-the-new-macbook-pro/what-facebook-can-teach-us-about-the-new-macbook-pro.mdx
@@ -3,6 +3,7 @@ title: "What Facebook can teach us about the new MacBook Pro"
 date: 2016-11-02
 slug: "what-facebook-can-teach-us-about-the-new-macbook-pro"
 type: Post
+include_in_reading_list: false
 status: Published
 description: "Why the radical redesign isn't such a bad thing."
 ---
