--- a/src/content/blog/2023/building-a-shopifyql-editor/building-a-shopifyql-editor.mdx
+++ b/src/content/blog/2023/building-a-shopifyql-editor/building-a-shopifyql-editor.mdx
@@ -3,6 +3,7 @@ title: 'Building a ShopifyQL Editor'
 date: 2023-09-14
 slug: 'building-a-shopifyql-editor'
 type: Post
+include_in_reading_list: true
 status: Published
 link: https://shopify.engineering/building-a-shopifyql-code-editor
 description: How I integrated CodeMirror into ShopifyQL Notebooks.
