--- a/src/content/blog/2023/codemirror-and-react/codemirror-and-react.mdx
+++ b/src/content/blog/2023/codemirror-and-react/codemirror-and-react.mdx
@@ -3,6 +3,7 @@ title: 'CodeMirror and React'
 date: 2023-10-24
 slug: 'codemirror-and-react'
 type: Post
+include_in_reading_list: true
 status: Published
 description: 'A few things you need to know when integrating CodeMirror 6 with React.'
 image:
