--- a/src/content/blog/2023/displaying-mermaid-charts-in-gatsby/displaying-mermaid-charts-in-gatsby.mdx
+++ b/src/content/blog/2023/displaying-mermaid-charts-in-gatsby/displaying-mermaid-charts-in-gatsby.mdx
@@ -3,6 +3,7 @@ title: 'Displaying Mermaid charts in Gatsby'
 date: 2023-08-24
 slug: 'displaying-mermaid-charts-in-gatsby'
 type: Post
+include_in_reading_list: true
 status: Published
 description: I like mermaid charts. But I didn't like any of the mermaid plugins for Gatsby. So I wrote one.
 image:
