--- a/src/content/blog/2023/learning-codemirror/learning-codemirror.mdx
+++ b/src/content/blog/2023/learning-codemirror/learning-codemirror.mdx
@@ -3,6 +3,7 @@ title: 'Learning CodeMirror'
 date: 2023-09-20
 slug: 'learning-codemirror'
 type: Post
+include_in_reading_list: true
 status: Published
 description: 'An introduction to CodeMirror, with practical examples of its primitives.'
 image:
