--- a/src/content/blog/2023/what-ive-been-up-to-lately/what-ive-been-up-to-lately.mdx
+++ b/src/content/blog/2023/what-ive-been-up-to-lately/what-ive-been-up-to-lately.mdx
@@ -3,6 +3,7 @@ title: "What I've been up to lately"
 date: 2023-07-21
 slug: 'what-ive-been-up-to-lately'
 type: Post
+include_in_reading_list: true
 status: Published
 description: 'I took a break from my blog for 3 years. What did I do in the meantime?'
 image:
