--- a/src/content/blog/2024/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
+++ b/src/content/blog/2024/advanced-state-management-with-react-and-codemirror/advanced-state-management-with-react-and-codemirror.mdx
@@ -3,6 +3,7 @@ title: "Advanced state management with React and CodeMirror"
 date: 2024-03-25
 slug: "advanced-state-management-with-react-and-codemirror"
 type: Post
+include_in_reading_list: true
 status: Published
 description: Going beyond the basics with these two libraries.
 image:
