--- a/src/content/blog/2024/connecting-antlr-to-code-mirror-6-connecting-a-language-server/connecting-antlr-to-code-mirror-6-connecting-a-language-server.mdx
+++ b/src/content/blog/2024/connecting-antlr-to-code-mirror-6-connecting-a-language-server/connecting-antlr-to-code-mirror-6-connecting-a-language-server.mdx
@@ -3,6 +3,7 @@ title: 'Connecting ANTLR to CodeMirror 6: Connecting a Language Server'
 slug: connecting-antlr-to-code-mirror-6-connecting-a-language-server
 date: 2024-02-16
 type: Post
+include_in_reading_list: true
 status: Published
 description: Connecting my Zephyr language server to CodeMirror.
 image:
