--- a/src/content/blog/2024/loaves-and-fishes/loaves-and-fishes.mdx
+++ b/src/content/blog/2024/loaves-and-fishes/loaves-and-fishes.mdx
@@ -3,6 +3,7 @@ title: Loaves and fishes
 date: 2024-06-28
 slug: 'loaves-and-fishes'
 type: Post
+include_in_reading_list: false
 status: Published
 description: 'Giving our all to the Lord, no matter how simple the offering.'
 image:
