--- a/src/content/blog/2024/loose-null-checks-in-javascript/loose-null-checks-in-javascript.mdx
+++ b/src/content/blog/2024/loose-null-checks-in-javascript/loose-null-checks-in-javascript.mdx
@@ -3,6 +3,7 @@ title: "Loose null checks in JavaScript"
 date: 2024-06-03
 slug: "loose-null-checks-in-javascript"
 type: Post
+include_in_reading_list: true
 status: Published
 description: "Strict equality checks in JavaScript always make sense–except for null."
 image:
